# genai-quickstart-pocs

./: .bandit  .env  .gitattributes  .gitignore  .npmignore  .projenrc.ts  ADDING_A_NEW_POC.md  CONTRIBUTING.md  README.md  SECURITY_SCANNING.md  TEST_CHECKLIST.md  cdk.json  package-lock.json  package.json  tsconfig.dev.json  tsconfig.json
.github/: AUTO_MERGE_CONFIG.md  ROLLBACK_GUIDE.md  SECURITY_SCAN_GUIDE.md  dependabot.yml
.projen/: deps.json  files.json  tasks.json
Sales-Analyst-Bedrock-Databricks/: Apache-2.0 license  README.md  README_aligned.md  cleanup.py  requirements.txt
Sales-Analyst-Bedrock-Snowflake/: README.md  app.py  requirements.txt  setup.py
agents-quickstart-pocs/fsi-agents-with-mcp/src/InlineAgent/: hello_world_mcp.py  pyproject.toml  versioneer.py
agents-quickstart-pocs/fsi-agents-with-mcp/src/InlineAgent/src/InlineAgent/: _version.py  utils.py
agents-quickstart-pocs/fsi-agents-with-mcp/src/InlineAgent/src/InlineAgent/action_group/: action_group.py
agents-quickstart-pocs/fsi-agents-with-mcp/src/InlineAgent/src/InlineAgent/agent/: __init__.py
agents-quickstart-pocs/fsi-agents-with-mcp/src/InlineAgent/src/InlineAgent/observability/: agent_instrument.py  settings_management.py  span_manager.py  trace.py  trace_provider.py  utils.py
agents-quickstart-pocs/fsi-agents-with-mcp/src/InlineAgent/src/InlineAgent/types/: __init__.py
agents-quickstart-pocs/fsi-agents-with-mcp/src/InlineAgent/src/tests/: __init__.py
agents-quickstart-pocs/fsi-agents-with-mcp/src/InlineAgent/src/tests/action_group/: test_action_group.py  test_action_groups.py
agents-quickstart-pocs/fsi-agents-with-mcp/src/InlineAgent/src/tests/knowledgebase/: test_knowledgebase_plugin.py
agents-quickstart-pocs/strands-sdk/mcp-aws-documentation-server/: .gitignore  HOWTO.md  README.md  agent.py  chatbot_app.py  main.py  pyproject.toml  requirements.txt
amazon-bedrock-amazon-athena-poc/: README.md  amazon_athena_bedrock_query.py  requirements.txt
amazon-bedrock-amazon-rds-poc/: README.md  amazonRDS_bedrock_query.py  app.py  requirements.txt
amazon-bedrock-amazon-redshift-poc/: README.md  amazon_redshift_bedrock_query.py  requirements.txt
amazon-bedrock-asynchronous-invocation-poc/: README.md  requirements.txt
amazon-bedrock-chat-poc/: README.md  chat_history.txt  prompt_finder_and_invoke_llm.py  requirements.txt
industry-specific-pocs/financial-services/Strands-Multi-Agent-Collaboration/swarm_Automated_FinancialResearchAnalysis/: __init__.py  company_analysis_agent.py  finance_assistant_swarm.py  pyproject.toml
industry-specific-pocs/financial-services/Strands-Multi-Agent-Collaboration/swarm_Automated_FinancialResearchAnalysis/.ipynb_checkpoints/: README-checkpoint.md  finance_assistant_swarm-checkpoint.py  financial_metrics_agent-checkpoint.py  pyproject-checkpoint.toml  stock_price_agent-checkpoint.py
industry-specific-pocs/financial-services/pe_fund_redemptions/genai/: Dockerfile  README.md  agent.py  agent_cli.py  agent_cli_mcp.py  agent_config.py  agent_deploy.py  agent_fastapi.py  agent_invoke.py  pyproject.toml
industry-specific-pocs/financial-services/pe_fund_redemptions/genai/prompts/: analyst_prompt.md  mcp_prompt.md  mcp_rules.md  pe_prompt.md  rules.md
industry-specific-pocs/financial-services/pe_fund_redemptions/genai/tools/: knowledge_base___retrieve_documents.py  pull_fund_document___get_fund_document.py  pull_s3_data___get_fund_mapping.py  pull_s3_data___get_investments.py  pull_s3_data___get_investors.py  pull_s3_data___get_redemption_requests.py
industry-specific-pocs/financial-services/pe_fund_redemptions/genai/tools/archived_database_tools/: query_database___get_fund_mapping.py  query_database___get_investments.py  query_database___get_investors.py  query_database___get_redemption_requests.py
(+2200 files in other folders)
