[project]
name = "mcp-aws-documentation-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "awslabs-aws-documentation-mcp-server>=1.1.2",
    "mcp>=1.12.1",
    "strands-agents>=1.0.1",
    "strands-agents-tools>=0.2.1",
    "streamlit>=1.47.0",
]
